--- a/client/css/jukebox.scss
+++ b/client/css/jukebox.scss
@@ -1490,52 +1490,72 @@ button.button-naucoin {
 
 //lyric modal
 
-.lyric-modal {
+.popup-lyric {
 	position: fixed;
+	z-index: 1999;
 	top: 0;
 	right: 0;
 	bottom: 0;
 	left: 0;
-	background-color: rgba(0, 0, 0, 0.5);
-	z-index: 300;
 	display: none;
+	background-color: rgba(0, 0, 0, 0.3);
+	transition: all 0.3s;
 
-	&.active {
+	&--active {
 		display: block;
+
+		.popup-lyric__wrap {
+			bottom: auto;
+			top: 50%;
+		}
 	}
 
-	.lyric-modal-inner {
-		position: absolute;
-		top: 50%;
+	&__wrap {
+		position: fixed;
+		bottom: -70vh;
 		left: 50%;
 		width: 50vw;
-		height: 60vh;
-		min-height: 540px;
+		height: 70vh;
 		transform: translate(-50%, -50%);
-		background-color: #fff;
-		border-radius: 10px;
+		z-index: 2000;
+		overflow: hidden;
+		transition: all 0.5s;
 	}
 
-	.lyric-modal-close {
+	&__header {
+		padding: 10px 15px;
+		text-align: center;
+		background-color: #4ca1ca;
+		color: white;
+		border-bottom: 3px solid #3b94bf;
+	}
+
+	&__close {
+		font-size: 24px;
 		position: absolute;
-		font-size: 30px;
-		right: 20px;
-		top: 5px;
-		cursor: pointer;
+		top: 10px;
+		right: 15px;
+		z-index: 1;
+
+		&:hover {
+			cursor: pointer;
+		}
 	}
 
-	.lyric-modal-header {
-		display: block;
-		margin-top: 10px;
+	&__body {
 		text-align: center;
-		padding-right: 20px;
+		max-height: calc(70vh - 90px);
+		overflow-y: auto;
+		padding: 15px;
+		background-color: #c3e9f5;
 	}
 
-	.lyric-modal-content {
-		text-align: center;
-		padding: 0 20px;
-		overflow-y: scroll;
-		height: 85%;
+	&__full {
+		margin-bottom: 0;
+	}
+
+	&__name {
+		font-weight: 400;
 	}
 }
 
