--- a/client/css/jukebox.scss
+++ b/client/css/jukebox.scss
@@ -62,7 +62,8 @@ form {
 	margin: 0;
 }
 
-input, select {
+input,
+select {
 	font-size: 14px;
 
 	&:focus {
@@ -184,7 +185,6 @@ h5 small {
 		display: flex;
 		padding: 15px 0;
 	}
-
 
 	&__img {
 		mix-blend-mode: multiply;
@@ -644,7 +644,6 @@ h5 small {
 	color: #a9c52f;
 }
 
-
 /* =============================================
 =          AppBody/TabNav                      =
 ============================================= */
@@ -797,7 +796,6 @@ h5 small {
 		}
 	}
 
-
 	&:hover {
 		background-color: #fafafa;
 	}
@@ -847,6 +845,53 @@ h5 small {
 	}
 }
 
+/* =============================================
+=          AppBody/TabTopList                  =
+============================================= */
+
+.tab__top-list {
+	&__title {
+		display: inline-block;
+	}
+
+	&__item {
+		display: flex;
+		flex-direction: column;
+		align-items: start;
+		margin-bottom: 0;
+		width: 22%;
+		overflow: hidden;
+		margin-top: 15px;
+	}
+
+	&__date {
+		font-size: 16px;
+	}
+
+	&__inner {
+		margin-bottom: 0;
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: space-between;
+	}
+
+	&__image {
+		width: 100%;
+	}
+
+	&__image-outter {
+		width: 100%;
+		overflow: hidden;
+	}
+
+	&__name {
+		width: 100%;
+	}
+
+	&__artist {
+		width: 100%;
+	}
+}
 
 // the position of fixed elements should be out of scrolling-area to remove juddering when scroll, https://remysharp.com/2012/05/24/issues-with-position-fixed-scrolling-on-ios
 .scroll-content {
@@ -1294,7 +1339,6 @@ h5 small {
 		align-items: center;
 		position: relative;
 
-
 		&::before {
 			content: '';
 			width: 8px;
@@ -1486,7 +1530,6 @@ button.button-naucoin {
 		opacity: 0;
 	}
 }
-
 
 //lyric modal
 
